tests/negative/list_for_empty_range_oob_index_assign.far
fun main() -> i64 {
  lst: List<i64> = List<i64>()
  for i in 5..<5 {
    lst.push(1)
  }
  lst[0] = 1
  return 0
}
